hphp/test/zend/good/ext/mbstring/tests/mb_substr_count_variation4.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_substr_count') or die("skip mb_substr_count() is not available in this build");
?>