hphp/test/zend/bad/ext/mbstring/tests/mb_strrichr_error1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strrichr') or die("skip mb_strrichr() is not available in this build");
?>